--- a/web/package.json
+++ b/web/package.json
@@ -25,7 +25,8 @@
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0"
+    "eslint-plugin-vue": "^7.0.0",
+    "vue3-ace-editor": "^2.2.2"
   },
   "eslintConfig": {
     "root": true,
